# python-stud-project-coursework

./: .coverage  .env_template  .gitignore  README.md  check_columns.py  pyproject.toml
src/: config.py  data_loader.py  main.py  reports.py  services.py  utils.py  views.py
tests/: test_config.py  test_main.py  test_reports.py  test_services.py  test_utils.py  test_views.py
