[tool.poetry]
name = "transaction-analyzer"
version = "0.1.0"
description = "Анализ банковских транзакций"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.0"
openpyxl = "^3.1.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
flake8 = "^6.0.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.0"

[tool.black]
line-length = 119
exclude = '''
/(
    \.git
  | __pycache__
  | \.venv
)/
'''

[tool.isort]
line_length = 119

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
